results/classifier/118/peripherals/2694
peripherals: 0.872
hypervisor: 0.838
mistranslation: 0.821
x86: 0.819
graphic: 0.814
arm: 0.803
debug: 0.793
performance: 0.790
risc-v: 0.787
vnc: 0.782
VMM: 0.781
TCG: 0.778
semantic: 0.776
permissions: 0.768
device: 0.755
KVM: 0.748
network: 0.747
register: 0.737
ppc: 0.736
user-level: 0.727
files: 0.724
PID: 0.724
i386: 0.722
kernel: 0.707
virtual: 0.705
boot: 0.683
architecture: 0.677
socket: 0.655
assembly: 0.626

error: implicit declaration of function 'IOMainPort' is invalid in C99
Description of problem:
Build in MacOS
    Hardware Overview:

      Model Name: MacBook Air
      Chip: Apple M1
      Total Number of Cores: 8 (4 performance and 4 efficiency)
      Memory: 16 GB
Steps to reproduce:
1. ./configure --cpu=aarch64 --target-list=aarch64-softmmu --enable-slirp
2. make -j
Additional information:
```
FAILED: libblock.a.p/block_file-posix.c.o
cc -Ilibblock.a.p -I. -I.. -Iqapi -Itrace -Iui -Iui/shader -Iblock -I/opt/homebrew/opt/zstd/include -I/opt/homebrew/Cellar/glib/2.82.2/include/glib-2.0 -I/opt/homebrew/Cellar/glib/2.82.2/lib/glib-2.0/include -I/opt/homebrew/opt/gettext/include -I/opt/homebrew/Cellar/pcre2/10.44/include -I/opt/homebrew/Cellar/glib/2.82.2/include -fdiagnostics-color=auto -Wall -Winvalid-pch -std=gnu11 -O2 -g -fstack-protector-strong -Wempty-body -Wendif-labels -Wexpansion-to-defined -Wformat-security -Wformat-y2k -Wignored-qualifiers -Winit-self -Wmissing-format-attribute -Wmissing-prototypes -Wnested-externs -Wold-style-definition -Wredundant-decls -Wstrict-prototypes -Wtype-limits -Wundef -Wvla -Wwrite-strings -Wno-gnu-variable-sized-type-not-at-end -Wno-initializer-overrides -Wno-missing-include-dirs -Wno-psabi -Wno-shift-negative-value -Wno-string-plus-int -Wno-tautological-type-limit-compare -Wno-typedef-redefinition -iquote . -iquote /Users/august/qemu/src -iquote /Users/august/qemu/src/include -iquote /Users/august/qemu/src/host/include/aarch64 -iquote /Users/august/qemu/src/host/include/generic -iquote /Users/august/qemu/src/tcg/aarch64 -D_GNU_SOURCE -D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE -fno-strict-aliasing -fno-common -fwrapv -fno-pie -MD -MQ libblock.a.p/block_file-posix.c.o -MF libblock.a.p/block_file-posix.c.o.d -o libblock.a.p/block_file-posix.c.o -c ../block/file-posix.c
../block/file-posix.c:3940:18: error: implicit declaration of function 'IOMainPort' is invalid in C99 [-Werror,-Wimplicit-function-declaration]
    kernResult = IOMainPort(MACH_PORT_NULL, &mainPort);
                 ^
1 error generated.
ninja: build stopped: subcommand failed.
make[1]: *** [run-ninja] Error 1
make: *** [build] Error 2
```
